--- a/.github/workflows/latex_build.yml
+++ b/.github/workflows/latex_build.yml
@@ -73,12 +73,14 @@ jobs:
 
       - name: LaTeX build ${{ matrix.root }}
         uses: xu-cheng/latex-action@v4
-        continue-on-error: true   # <- GH Actions ignoruje ten vadný exit code
+        continue-on-error: true
         with:
           root_file: ${{ matrix.root }}
           work_in_root_file_dir: true
           continue_on_error: true
-          post_compile: echo "ok" # (volitelné) ať se projde větev post_compile
+          latexmk_use_xelatex: ${{ steps.detect.outputs.engine == 'xelatex' }}
+          latexmk_use_lualatex: ${{ steps.detect.outputs.engine == 'lualatex' }}
+          # args: -interaction=nonstopmode -halt-on-error
 
       - name: Make safe artifact names
         id: names
@@ -86,17 +88,12 @@ jobs:
         shell: bash
         run: |
           set -euo pipefail
-          # vstup: např. unified_biquaternion_theory/solution_theta_particle_model_P2/internal_mode_analysis.tex
           root="${{ matrix.root }}"
-          # bezpečné jméno pro artefakt (bez / a bez mezer/uvozovek apod.)
-          safe="$(printf '%s' "$root" \
-            | sed 's|/|__|g; s|[^A-Za-z0-9._-]|_|g')"
-          # typicky:
-          #  pdf-unified_biquaternion_theory__solution_theta_particle_model_P2__internal_mode_analysis.tex
+          safe="$(printf '%s' "$root" | sed 's|/|__|g; s|[^A-Za-z0-9._-]|_|g')"
           pdf_name="pdf-${safe}"
           log_name="logs-${safe}"
-          echo "pdf_name=$pdf_name"   >> "$GITHUB_OUTPUT"
-          echo "log_name=$log_name"   >> "$GITHUB_OUTPUT"
+          echo "pdf_name=$pdf_name" >> "$GITHUB_OUTPUT"
+          echo "log_name=$log_name" >> "$GITHUB_OUTPUT"
 
       - name: Check produced files
         id: produced
